--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>Encriptador</title>
     <link rel="stylesheet" type="text/css" href="./Styles/style.css">
 </head>
-<body>
+<body class="body">
     <main>
         <img class="logo__alura" src="./assets/Logo.png">   
-        <div> 
-            <textarea class="text__area" id="texto">ingrese el texto aqui</textarea>
+        <div class="div__superior"> 
+            <textarea class="text__area" rows="1" id="texto">ingrese el texto aqui</textarea>
            <div class="inferior">
             <div class="advertencia"> 
                 <img class="advertencia__imagen" src="./assets/bi_exclamation-circle-fill-1.png">
